--- a/mobly/sample_config_3.yml
+++ b/mobly/sample_config_3.yml
@@ -2,9 +2,9 @@ TestBeds:
   - Name: TwoDeviceTestBed
     Controllers:
         AndroidDevice:
-          - serial: xyz
-            label: target
           - serial: abc
+            label: target
+          - serial: def
             label: discoverer
     TestParams:
         bluetooth_name: MagicBluetooth
